--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -1,8 +1,8 @@
 {
-    "nav-link1":"About Us",
-    "nav-link2":"Category",
-    "nav-link3":"Socks",
-    "nav-link4":"Contact",
+    "navLink1":"About Us",
+    "navLink2":"Category",
+    "navLink3":"Socks",
+    "navLink4":"Contact",
     "contact":"Contact"
 
     
