--- a/public/assets/locales/ru/translation.json
+++ b/public/assets/locales/ru/translation.json
@@ -1,7 +1,7 @@
 {
-    "nav-link1":"ГЛАВНАЯ",
-    "nav-link2":"О компании",
-    "nav-link3":"носки",
-    "nav-link4":"контакт",
+    "navLink1":"ГЛАВНАЯ",
+    "navLink2":"О компании",
+    "navLink3":"носки",
+    "navLink4":"контакт",
     "contact":"контакт"
 }
