--- a/public/assets/locales/uz/translation.json
+++ b/public/assets/locales/uz/translation.json
@@ -1,7 +1,7 @@
 {
-    "nav-link1":"Biz haqimizda",
-    "nav-link2":"Bo'limlar",
-    "nav-link3":"Paypoqlar",
-    "nav-link4":"Bog'lanish",
+    "navLink1":"Biz haqimizda",
+    "navLink2":"Bo'limlar",
+    "navLink3":"Paypoqlar",
+    "navLink4":"Bog'lanish",
     "contact":"Bog'lanish"
 }
