--- a/public/assets/locales/uz/translation.json
+++ b/public/assets/locales/uz/translation.json
@@ -1,7 +1,7 @@
 {
-    "navLink1":"Biz haqimizda",
-    "navLink2":"Bo'limlar",
-    "navLink3":"Paypoqlar",
-    "navLink4":"Bog'lanish",
+    "navLinkA":"Biz haqimizda",
+    "navLinkB":"Bo'limlar",
+    "navLinkC":"Paypoqlar",
+    "navLinkD":"Bog'lanish",
     "contact":"Bog'lanish"
 }
