--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -1,8 +1,8 @@
 {
-    "navLink1":"About Us",
-    "navLink2":"Category",
-    "navLink3":"Socks",
-    "navLink4":"Contact",
+    "navLinkA":"About Us",
+    "navLinkB":"Category",
+    "navLinkC":"Socks",
+    "navLinkD":"Contact",
     "contact":"Contact"
 
     
