--- a/public/assets/locales/ru.json
+++ b/public/assets/locales/ru.json
@@ -3,5 +3,7 @@
     "navLinkB":"О компании",
     "navLinkC":"носки",
     "navLinkD":"контакт",
-    "contact":"контакт"
+    "contact":"контакт",
+    "contact-title":"оставьте свои данные и мы свяжемся с вами",
+    "send":"отправлять"
 }
