--- a/public/assets/locales/uz.json
+++ b/public/assets/locales/uz.json
@@ -3,5 +3,8 @@
     "navLinkB":"Bo'limlar",
     "navLinkC":"Paypoqlar",
     "navLinkD":"Bog'lanish",
-    "contact":"Bog'lanish"
+    "contact":"Bog'lanish",
+    "contact-title":"malumotingizni qoldiring aloqaga chiqamiz",
+    "send":"Yuborish",
+    "":""
 }
