--- a/public/assets/locales/ru.json
+++ b/public/assets/locales/ru.json
@@ -1,9 +1,15 @@
 {
-    "navLinkA":"ГЛАВНАЯ",
-    "navLinkB":"О компании",
-    "navLinkC":"носки",
-    "navLinkD":"контакт",
-    "contact":"контакт",
-    "contact-title":"оставьте свои данные и мы свяжемся с вами",
-    "send":"отправлять"
+    "navLinkA":"О нас",
+    "navLinkB":"Категория",
+    "navLinkC":"Продукты",
+    "navLinkD":"Контакт",
+    "contact":"Контакт",
+    "hero-title":"Современная одежда с модным",
+    "send":"отправлять",
+    "contact-title":"Оставьте свои данные и мы свяжемся с вами",
+    "layout-tit" : "Мы команда, которая знает свое дело",
+    "bruto-tit" : "Мы захватили большую часть рынка",
+    "about-tit" : "Широкий ассортимент продукции любого типа",
+    "shop-tit" : "сочетание уникального внешнего вида и качества",
+    "batafsil" : "Подробности"
 }
