--- a/public/assets/locales/en.json
+++ b/public/assets/locales/en.json
@@ -1,11 +1,28 @@
 {
     "navLinkA":"About Us",
     "navLinkB":"Category",
-    "navLinkC":"Socks",
-    "navLinkD":"Contact",
+    "navLinkC":"Products",
+    "navLinkD":"Contact Us",
     "contact":"Contact",
+    "hero-title":"Modern clothes with trendy",
+    "send":"Send",
     "contact-title":"Leave your details and we will contact you",
-    "send":"Send"
+    "layout-tit" : "We are a team that is a master of its work",
+    "bruto-tit" : "We have captured a large part of the market",
+    "about-tit" : "A wide range of products in any type",
+    "shop-tit" : "a combination of unique appearance and quality",
+    "batafsil" : "Details",
+    "nomi" : "Qoshtirnoq 1",
+    "nomi" : "Qoshtirnoq 1",
+    "nomi" : "Qoshtirnoq 1",
+    "nomi" : "Qoshtirnoq 1",
+    "nomi" : "Qoshtirnoq 1",
+    "nomi" : "Qoshtirnoq 1",
+    "nomi" : "Qoshtirnoq 1",
+    "nomi" : "Qoshtirnoq 1",
+    "nomi" : "Qoshtirnoq 1",
+    "nomi" : "Qoshtirnoq 1",
+    "nomi" : "Qoshtirnoq 1"
 
     
 }
