--- a/public/assets/locales/en.json
+++ b/public/assets/locales/en.json
@@ -11,18 +11,7 @@
     "bruto-tit" : "We have captured a large part of the market",
     "about-tit" : "A wide range of products in any type",
     "shop-tit" : "a combination of unique appearance and quality",
-    "batafsil" : "Details",
-    "nomi" : "Qoshtirnoq 1",
-    "nomi" : "Qoshtirnoq 1",
-    "nomi" : "Qoshtirnoq 1",
-    "nomi" : "Qoshtirnoq 1",
-    "nomi" : "Qoshtirnoq 1",
-    "nomi" : "Qoshtirnoq 1",
-    "nomi" : "Qoshtirnoq 1",
-    "nomi" : "Qoshtirnoq 1",
-    "nomi" : "Qoshtirnoq 1",
-    "nomi" : "Qoshtirnoq 1",
-    "nomi" : "Qoshtirnoq 1"
+    "batafsil" : "Details"
 
     
 }
