--- a/public/assets/locales/uz.json
+++ b/public/assets/locales/uz.json
@@ -6,7 +6,7 @@
     "contact":"Bog'lanish",
     "hero-title":"Zamonaviy kiyimlar trendy bilan",
     "send":"yuborish",
-    "layout-tit" : "o’z ishining ustasi bo’lgan jamoamiz",
+    "layout-tit" : "bizning o’z ishining ustasi bo’lgan jamoamiz",
     "contact-title":"malumotingizni qoldiring aloqaga chiqamiz",
     "bruto-tit" : "Biz bozorning katta qismini egalladik",
     "about-tit" : "Keng qamrovli mahsulotlar istalgan turda",
